# avimind

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
avimind/: __init__.py  client.py  exceptions.py
avimind.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
avimind_server/: consolidation_service.py  db.py  embeddings.py  main.py  memory_service.py  models.py  schemas.py
examples/: sdk_test.py
migrations/: env.py
migrations/versions/: d58f22a8e1a4_add_memory_lifecycle_fields.py  d7ff51fe128e_create_memories_table.py
